...
                    mode = HandleFileContract.FILE
                    allowExtensions = arrayOf("txt", "json", "js")
                }
            "import" -> showDialogFragment(ImportBookSourceDialog(effect.key))
            "groups" -> showDialogFragment<GroupManageDialog>()
            "check-config" -> showDialogFragment<CheckSourceConfig>()
            "help" -> showHelp("SourceMBookHelp")
            "edit" -> startActivity<BookSourceEditActivity> { putExtra("sourceUrl", effect.key) }
            "debug" -> startActivity<BookSourceDebugActivity> { putExtra("key", effect.key) }
            "login" ->
                startActivity<SourceLoginActivity> {
                    putExtra("type", "bookSource")
                    putExtra("key", effect.key)
...
